--- a/index.html
+++ b/index.html
@@ -7,5 +7,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </head>
   <body>
+    <div id="header" class="container-fluid">
+
+    </div>
+    <div id="search" class="container-fluid">
+
+    </div>
+    <div id="results" class="container-fluid">
+
+    </div>
+
   </body>
 </html>
