--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href='styles.css'>
   </head>
   <body>
+    <section class='header'>
     <div id="header" class="container-fluid">
 
     </div>
+  </section>
     <div id="search" class="container-fluid">
 
     </div>
