adding to the header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <section class='header'>
     <div id="header" class="container-fluid">
-
+      <h1>Find Your Dream Neighborhood</h1>
     </div>
   </section>
     <div id="search" class="container-fluid">
