added example slider

--- a/index.html
+++ b/index.html
@@ -15,9 +15,17 @@
     </div>
   </section>
     <div id="search" class="container-fluid">
-      <h2>What's important to you?</h2>
+      <h1 class="display-2">What's important to you?</h1>
       <div class="search-cont">
-
+        <div class="criteria">
+          <div class="criteria-words">
+            <h3>criteria.</h3>
+            <p>A short description of the criteria.</p>
+          </div>
+          <div class="criteria-slider">
+            <input type="range" min="1" max="10" value="5" class="slider" id="example-slider">
+          </div>
+        </div>
       </div>
     </div>
     <div id="results" class="container-fluid">
